# pyparquet

./: .gitignore  README.md  main.py  pyparquet.py  pyproject.toml
src/click_cli/: cmd.py  utils.py
src/parquet_duck/: parquet.py  utils.py
